2003-08-03  Andras Varga

	* bugfix: if a simple module was typed in the NED text, it was lost 
	when switching back to graphics

	* bugfix: when a loop connection was deleted in graphics mode, 
	empty for loop was left behind which is syntactically invalid in NED

2003-08-01  Andras Varga

	* random submodule placement (used when display string doesn't contain
	coordinates) changed to work identically to Tkenv: x is random and
	y keeps growing

2003-07-28  Andras Varga

	* canvas.tcl, gned.tcl: implemented "export postscript and exit" mode;
	also exports images.xml that contains info for creating clickable image
	maps

2003-06-16  ------ omnetpp-2.3 released ------

2003-03-15  ------ omnetpp-2.3b2 released ------

2003-03-15  Andras Varga

	* fixed bug: gates added via the Properties dialog were generated
	with wrong NED syntax

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-14  Andras Varga

	* no limit on ned file line length

2003-01-30  Andras Varga

	* changed connection drawing: now default mode is "auto", then if user
	insists on exact placement by dragging the arrow, it changes to 
	"manual" mode. 
	
	* fixed bug that it always created display strings for connections
	[hint from Steffen Sroka].

	* double click on a submodule which is a simple module now opens 
	module properties dialog

	* increased default size of enclosing module rectangle

2003-01-19  Andras Varga

	* Cygwin fixes; put checkTckTkVersion and setupTkOptions (was generic_-
	bindings) into widgets.tcl

2003-01-12  Andras Varga

	* tree view improved

2003-01-11  Andras Varga

	* main.tcl: appearance of menus on Unix made more contemporary 
	(via option add's)

2003-01-04  Andras Varga

	* props.tcl: Module/Submodule/etc Properties dialogs now validate 
	values entered in the Parameters, Gates, Machines etc. tables, 
	so that invalid values no longer cause errors. (new proc validate-
	AttrValue)

2002-12-03  Andras Varga
